# hw-exception

./: Cargo.toml  README.md  build.rs
buildtests/: libc-signals.rs
src/: cdecls.rs  hwexception.c  lib.rs  signals.rs
src/sysdeps/: aarch64-linux-gnu.c  arm-linux-musl.c  i686-linux-musl.c  riscv-linux-gnu.c  unsupported.c  x86_64-linux-gnu.c
